--- a/styleofDOM.css
+++ b/styleofDOM.css
@@ -19,8 +19,9 @@ button{
     margin: 15px;
     background-color: chocolate;
 }
-.para{
+.paras{
     color: white;
+    background-color: black;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
 }
